fix(footer): align center on sm screens

--- a/components/Organisms/Footer/footer.css
+++ b/components/Organisms/Footer/footer.css
@@ -10,6 +10,7 @@
     align-items: center;
     justify-content: center;
     gap: rem-convert(20px);
+    text-align: center;
   }
 
   &-socials {
